# lists-mateonoel2

./: CMakeLists.txt  bidirectional_iterator.h  circular.h  forward.h  forward_iterator.h  linked.h  list.h  main.cpp  node.h  tester.h
iterators/: bidirectional_iterator.h  forward_iterator.h
